test/bad/duplicate_enum.veld
// BAD: duplicate enum name
enum Role {
  admin
  user
}

enum Role {
  guest
}

